# mcp-web-app

./: .env.example  .env.railway.example  .gitignore  Dockerfile.migrate  README.md  pyproject.toml  railway.analytics.toml  railway.binance-ingest.toml  railway.execution.toml  railway.gateway-api.toml  railway.mcp-server.toml  railway.migrate.toml  railway.normalizer.toml  railway.strategy-service.toml  railway.toml
docs/: backend_overview.md  paper_mode_pricing_and_strategy.md  railway_deploy_checklist.md
infra/: docker-compose.test.yml  docker-compose.yml  railway.toml
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_add_missing_constraints_and_indexes.py  003_seed_test_strategy.py  004_seed_test_exchange_account.py  005_seed_ma_crossover_strategy.py  006_account_stream_status.py
scripts/: gen_dev_token.py  import_env_credentials.py  mcp_audit.py  migrate.sh  smoke_gateway.sh  smoke_mcp.sh  smoke_paper_trade.sh  store_credentials.py  test_gateway_e2e.ps1
services/analytics/: Dockerfile  config.py  consumer.py  dispatcher.py  health.py  hot_state.py  main.py  publisher.py  requirements.txt  state.py
services/binance_ingest/: Dockerfile  config.py  health.py  main.py  requirements.txt
services/execution/: Dockerfile  config.py  consumer.py  credentials.py  health.py  main.py  requirements.txt
services/gateway_api/: Dockerfile  auth.py  config.py  health.py  main.py  requirements.txt
services/mcp_server/: Dockerfile  auth.py  config.py  health.py  identity.py  login.py  main.py  protocol.py  (+3 more)
shared/: metrics.py
(+180 files in other folders)
